--- a/cryptogram_solver.html
+++ b/cryptogram_solver.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Cryptogram Solver by Matt Nutsch</title>
+<title>Cryptogram Decoder</title>
 	
 <script type="text/javascript">
 /**********************************************************************
@@ -519,7 +519,8 @@ Unencrypted Letter: <input type="text" value="Encrypted Letter" disabled>
 <br/>
 <strong>Analysis:</strong><br/> 
 <textarea id="analysis" name="analysis" rows="10" cols="80">
-</textarea>
+</textarea><br/>
+<div>Copyright &copy; 2017-Present <a href="http://www.mattnutsch.com">Matt Nutsch<a/>. All rights reserved.</div>
 
 </body>
 
