--- a/cryptogram_solver.html
+++ b/cryptogram_solver.html
@@ -405,8 +405,7 @@ function downloadFile(filename, elId)
 	
 </head>
 <body>
-<h1>Cryptogram Solver</h1>
-<h4>by Matt Nutsch</h4>
+<h1>Cryptogram Decoder</h1>
 This app will decipher a cryptogram, using letter substitution.<br/>
 <strong>Instructions:</strong>
 <ol>
